Minor changes. fixes a few UI overlaps/ bugs

--- a/ProjectManager/ProjectManager/wwwroot/css/site.css
+++ b/ProjectManager/ProjectManager/wwwroot/css/site.css
@@ -42,7 +42,6 @@ html {
 }
 
 body {
-    margin-bottom: 60px;
     background-color: var(--darker_bg);
     color: var(--colourpalette-white);
 }
@@ -63,10 +62,10 @@ header{
     background-color: var(--colourpalette-nav_bg);
     border-right: var(--colourpalette-pink);
     position: fixed;
-    margin-top: -15px;
     align-self: start;
     transition: 300ms ease-in-out;
     overflow: hidden;
+    overflow-y:auto;
 }
 
 .side_nav ul{
@@ -105,11 +104,6 @@ header{
 
 .side_nav a:hover{
     background-color: var(--colourpalette-pink);
-}
-
-
-.side_nav{
-    display: block;
 }
 
 .side_nav.close {
@@ -160,6 +154,32 @@ nav {
     margin-left: auto;
     margin-right: 30px;
     display:flex;
+    align-items:center;
+    gap: 15px;
+}
+
+.profile_picture {
+    height: 100%;
+    width: 100%;
+}
+
+
+
+.profilepicture_container {
+display: flex;
+justify-content: center;
+align-items: center;
+width: 50px;
+height: 50px;
+border-radius: 50%;
+border: 1px solid white;
+overflow: clip;
+}
+
+.profilepicture_container:hover {
+cursor: pointer;
+border-color: var(--colourpalette-pink);
+border-width:2px;
 }
 
 /* https://copy-paste-css.com/ */
@@ -195,7 +215,7 @@ nav {
 footer {
     position:absolute;
     color: var(--colourpalette-white);
-    height: 100px;
+    min-height: 100px;
     width:100%;
     padding: 0px 15px;
     background-color:var(--colourpalette-nav_bg)
@@ -214,6 +234,7 @@ footer {
     display:flex;
     height:100%;
     width: 100%;
+    flex-wrap:wrap;
 }
 
 .footer_container > div {
@@ -225,6 +246,7 @@ footer {
     width: 33%;
     margin: auto;
     line-height: 0px;
+    min-width:220px;
 }
 
 .footer_container > div p
